Make sure edit buttons are always visible

--- a/assets/src/input.scss
+++ b/assets/src/input.scss
@@ -34,7 +34,7 @@
     width: 100%;
     height: auto;
     display: block;
-    min-width: 30px;
+    min-width: 150px;
     min-height: 30px;
     background: #f1f1f1;
     margin: 0 0 0 2px;
@@ -116,7 +116,7 @@
     width: auto;
     height: auto;
     display: block;
-    min-width: 30px;
+    min-width: 150px;
     min-height: 30px;
     background: #f1f1f1;
     margin: 0;
